Updated syllabus and schedule.

--- a/doc/cs253-fall-2020.md
+++ b/doc/cs253-fall-2020.md
@@ -1,3 +1,18 @@
+# CS253: Data Structures and Algorithms
+
+This is an advanced programming course in computer science that teaches how to design structures and algorithms to process big data and standard methods to benchmark their performance for large-scale computing.
+The topics cover data structures such as _priority queues_, _search trees_, _disjoint sets_, and _graphs_, as well as their applications in the construction of efficient algorithms such as _sorting_, _searching_, _balancing_, _spanning_, and _optimization_.
+Throughout this course, students are expected to
+
+* Have deep conceptual understanding in various data structures and algorithms.
+* Implement their conceptual understanding in a programming language.
+* Explore the most effective structures and algorithms for given tasks.
+* Properly assess the quality of their implementations.
+
+The prerequisite of this course is "CS171: Introduction to Computer Science II" (or equivalent).
+There are 10 weekly quizzes and 4 homework assignments that require sufficient skills in Java programming, Git version control, Gradle software project management, and LaTex writing.
+
+
 # Syllabus
 
 ## General
@@ -61,3 +76,47 @@
 * Once answer keys are presented, no submission will be accepted for assignments and quizzes.
 * Your work is governed by the [Emory Honor Code](http://catalog.college.emory.edu/academic/policies-regulations/honor-code.html). Honor code violations (e.g., copies from any source including your colleagues and internet sites) will be referred to the [Emory Honor Council](http://college.emory.edu/oue/current-students/honor-council.html).
 * Excuses for absence/reschedule and other serious personal events (health, family, personal related, etc.) that affect course performance must be accompanied by a letter from the [Office for Undergraduate Education](http://college.emory.edu/oue/current-students/advising.html).
+
+
+
+
+
+
+
+
+
+
+
+
+# Schedule
+
+| Date | Topic | Lecture | Assignment |
+|:---:|---|---|:-:|
+|08/19| [Introduction]() | [md]() | [quiz 0]() |
+|08/24| [Java Programming]() | [md](), [pdf](), [src]() | |
+|08/26| [Java Programming]() | [md](), [pdf](), [src]() | [quiz 1]() |
+|08/31| [Priority Queues]() | [md](), [pdf](), [src]() | |
+|09/02| [Priority Queues]() | [md](), [pdf](), [src]() | [quiz 2]() |
+|09/07| [Priority Queues]() | [md](), [pdf](), [src]() |  |
+|09/09| [Sorting Algorithms]() | [md](), [pdf](), [src]() | [quiz 3]() |
+|09/14| [Sorting Algorithms]() | [md](), [pdf](), [src]() | |
+|09/16| [Sorting Algorithms]() | [md](), [pdf](), [src]() | [quiz 4]() |
+|09/21| [Binary Search Trees]() | [md](), [pdf](), [src]() | [hw 1]() | 
+|09/23| [Binary Search Trees]() | [md](), [pdf](), [src]() | |
+|09/28| [Binary Search Trees]() | [md](), [pdf](), [src]() | [quiz 5]() | 
+|09/30| [Tries]() | [md](), [pdf](), [src]() | |
+|10/05| [Tries]() | [md](), [pdf](), [src]() | [quiz 6]() |
+|10/07| [Homework 1]() |  | [hw 2]() |
+|10/12| [Disjoint Sets]() | [md](), [pdf](), [src]() | |
+|10/14| [Minimum Spanning Trees]() | [md](), [pdf](), [src]() | |
+|10/19| [Minimum Spanning Trees]() | [md](), [pdf](), [src]() | [quiz 7]() |
+|10/21| [Minimum Spanning Trees]() | [md](), [pdf](), [src]() | |
+|10/26| [Topological Sort]() | [md](), [pdf](), [src]() | [quiz 8]() |
+|10/28| [Homework 2]() |  | [hw 3]() |
+|11/02| [Network Flows]() | [md](), [pdf](), [src]() | |
+|11/04| [Network Flows]() | [md](), [pdf](), [src]() | |
+|11/09| [Network Flows]() | [md](), [pdf](), [src]() | [quiz 9]() |
+|11/11| [Dynamic Programming]() | [md](), [pdf](), [src]() | | 
+|11/16| [Dynamic Programming]() | [md](), [pdf](), [src]() | [quiz 10]() |
+|11/18| [Homework 3]() |  | [hw 4]() |
+|11/23| Review | | |
